backend/k8s/no-requests-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: task-manager
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: gcr.io/circular-hash-459513-q5/api-gateway:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: task-manager
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: gcr.io/circular-hash-459513-q5/auth-service:latest
        ports:
        - containerPort: 3001
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
